--- a/package.json
+++ b/package.json
@@ -1,8 +1,27 @@
 {
   "dependencies": {
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
     "openai": "^4.83.0"
-  }
+  },
+  "name": "hackathon-alarmists-backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Yare2911/hackathon-alarmists-backend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Yare2911/hackathon-alarmists-backend/issues"
+  },
+  "homepage": "https://github.com/Yare2911/hackathon-alarmists-backend#readme"
 }
