Add type: module to package.json for ES import/export syntax

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9",
     "openai": "^4.83.0"
   },
   "name": "hackathon-alarmists-backend",
@@ -11,8 +10,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Yare2911/hackathon-alarmists-backend.git"
@@ -23,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/Yare2911/hackathon-alarmists-backend/issues"
   },
-  "homepage": "https://github.com/Yare2911/hackathon-alarmists-backend#readme"
+  "homepage": "https://github.com/Yare2911/hackathon-alarmists-backend#readme",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
